cmake_minimum_required(VERSION 3.25)
project(Chap02)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Chap02 FuncPointer1.cpp)

add_executable(FuncPointer1 FuncPointer1.cpp)
add_executable(FuncPointer2 FuncPointer2.cpp)
add_executable(FuncPointer3 FuncPointer3.cpp)
add_executable(FuncPointer4 FuncPointer4.cpp)
add_executable(CallBack CallBack.cpp)