cmake_minimum_required(VERSION 3.25)
project(Chap03)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Chap03 Functor1.cpp)

add_executable(Functor1 Functor1.cpp)
add_executable(Functor2 Functor2.cpp)
add_executable(Functor3 Functor3.cpp)
add_executable(Functor4 Functor4.cpp)
add_executable(Q2 Q2.cpp)
add_executable(Q3 Q3.cpp)