cmake_minimum_required(VERSION 3.25)
project(Vector)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Vector PushBack.cpp)

add_executable(PushBack PushBack.cpp)
add_executable(SizeType SizeType.cpp)
add_executable(SizeCapacityMaxSize SizeCapacityMaxSize.cpp)
add_executable(Capacity Capacity.cpp)
add_executable(Reserve Reserve.cpp)
add_executable(VectorCTOR1 VectorCTOR1.cpp)
add_executable(VectorCTOR2 VectorCTOR2.cpp)
add_executable(Resize Resize.cpp)
add_executable(ClearEmpty ClearEmpty.cpp)
add_executable(Swap Swap.cpp)
add_executable(FrontBack FrontBack.cpp)
add_executable(OperatorAt OperatorAt.cpp)
add_executable(Assign1 Assign1.cpp)
add_executable(Iterator1 Iterator1.cpp)
add_executable(Iterator2 Iterator2.cpp)
add_executable(Insert1 Insert1.cpp)
add_executable(Insert2 Insert2.cpp)
add_executable(Erase Erase.cpp)
add_executable(VectorCTOR3 VectorCTOR3.cpp)
add_executable(Assign2 Assign2.cpp)
add_executable(Operator Operator.cpp)