cmake_minimum_required(VERSION 3.25)
project(Map)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Map MapTemplate.cpp)

add_executable(MapTemplate MapTemplate.cpp)
add_executable(Insert1 Insert1.cpp)
add_executable(Insert2 Insert2.cpp)
add_executable(Operator Operator.cpp)
add_executable(FindFunc FindFunc.cpp)