cmake_minimum_required(VERSION 3.25)
project(Set)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Set Insert.cpp)

add_executable(Insert1 Insert1.cpp)
add_executable(Insert2 Insert2.cpp)
add_executable(Insert3 Insert3.cpp)
add_executable(SetTemplate SetTemplate.cpp)
add_executable(KeyValueComp KeyValueComp.cpp)
add_executable(Count Count.cpp)
add_executable(Find Find.cpp)
add_executable(KeyComp KeyComp.cpp)
add_executable(LowerUpperBound LowerUpperBound.cpp)
add_executable(EqualRange EqualRange.cpp)