cmake_minimum_required(VERSION 3.25)
project(NonmodifyingAlgorithms)

set(CMAKE_CXX_STANDARD 17)

#add_executable(NonmodifyingAlgorithms AdjacentFind1.cpp)

add_executable(AdjacentFind1 AdjacentFind1.cpp)
add_executable(AdjacentFind2 AdjacentFind2.cpp)
add_executable(AdjacentFind3 AdjacentFind3.cpp)
add_executable(Count Count.cpp)
add_executable(CountIf CountIf.cpp)
add_executable(Equal1 Equal1.cpp)
add_executable(Equal2 Equal2.cpp)
add_executable(Find Find.cpp)
add_executable(FindEnd1 FindEnd1.cpp)
add_executable(FindEnd2 FindEnd2.cpp)
add_executable(FindFirstOf1 FindFirstOf1.cpp)
add_executable(FindFirstOf2 FindFirstOf2.cpp)
add_executable(ForEach1 ForEach1.cpp)
add_executable(ForEach2 ForEach2.cpp)
add_executable(LexicographicalCompare1 LexicographicalCompare1.cpp)
add_executable(LexicographicalCompare2 LexicographicalCompare2.cpp)
add_executable(MaxMin MaxMin.cpp)
add_executable(MaxMinElement1 MaxMinElement1.cpp)
add_executable(MaxMinElement2 MaxMinElement2.cpp)
add_executable(MisMatch1 MisMatch1.cpp)
add_executable(MisMatch2 MisMatch2.cpp)
add_executable(Search Search.cpp)
add_executable(SearchN1 SearchN1.cpp)
add_executable(SearchN2 SearchN2.cpp)