cmake_minimum_required(VERSION 3.25)
project(NumericAlgorithms)

set(CMAKE_CXX_STANDARD 17)

#add_executable(NumericAlgorithms Accumulate1.cpp)

add_executable(Accumulate1 Accumulate1.cpp)
add_executable(Accumulate2 Accumulate2.cpp)
add_executable(InnerProduct1 InnerProduct1.cpp)
add_executable(InnerProduct2 InnerProduct2.cpp)
add_executable(AdjacentDifference1 AdjacentDifference1.cpp)
add_executable(AdjacentDifference2 AdjacentDifference2.cpp)
add_executable(PartialSum1 PartialSum1.cpp)
add_executable(PartialSum2 PartialSum2.cpp)
