cmake_minimum_required(VERSION 3.25)
project(RemovingAlgorithms)

set(CMAKE_CXX_STANDARD 17)

#add_executable(RemovingAlgorithms Remove1.cpp)

add_executable(Remove1 Remove1.cpp)
add_executable(Remove2 Remove2.cpp)
add_executable(RemoveIf RemoveIf.cpp)
add_executable(RemoveCopy RemoveCopy.cpp)
add_executable(Unique1 Unique1.cpp)
add_executable(Unique2 Unique2.cpp)