cmake_minimum_required(VERSION 3.25)
project(Functor)

set(CMAKE_CXX_STANDARD 11)

#add_executable(Functor Predicate.cpp)

add_executable(Predicate1 Predicate1.cpp)
add_executable(Predicate2 Predicate2.cpp)
add_executable(FunctionAdaptor1 FunctionAdaptor1.cpp)
add_executable(FunctionAdaptor2 FunctionAdaptor2.cpp)
add_executable(FunctionAdaptor3 FunctionAdaptor3.cpp)